<resources>
    <string name="app_name">我的保险</string>

    <!--Title-->
    <string name="myinsurance">我的保险</string>
    <string name="insurancehistory_list">历史保单</string>
    <string name="lookup_fund">查看维修基金</string>
    <string name="editdata">修改资料</string>


    <!--MyInsuranceActivity-->

    <!--activity_myinsurance-->
    <string name="myinsurance_button_queryprise">一键询价</string>
    <string name="myinsurance_carlicence">辽B87YYU</string>
    <string name="myinsurance_deadline_text">保险到期日：</string>
    <string name="myinsurance_deadline_date">2018/7/8</string>
    <string name="myinsurance_rightbutton_text">续保</string>
    <string name="myinsurance_righttext_callus">联系我们</string>
    <string name="myinsurance_leftbutton_wait">请等待</string>
    <string name="myinsurance_leftbutton_buynow">马上购买</string>
    <string name="myinsurance_leftbutton_editdata">修改资料</string>
    <string name="myinsurance_righttext_revoke">撤销保单</string>


    <!--PickInsuranceKindActivity-->

    <!--activity_pickinsurancekind-->
    <string name="payunscientific">交强险</string>
    <string name="business_insurance">商业保险</string>
    <string name="thirdresponsibility_insurance">第三者责任险</string>
    <string name="thirdresponsibility_insurance_thirty">30万</string>
    <string name="thirdresponsibility_insurance_fifty">50万</string>
    <string name="thirdresponsibility_insurance_hundred">100万</string>
    <string name="carloss_insurance">车辆损失险</string>
    <string name="carstolen_insurance">全车盗抢险</string>
    <string name="glassbroken_insurance">玻璃单独破损险</string>
    <string name="madeinchina">国产车</string>
    <string name="madeoutofchina">进口车</string>
    <string name="payfornatureloss">自然损失险</string>
    <string name="disregard_insurance">不计免赔险</string>
    <string name="noresponsibility_insurance">无过责任险</string>
    <string name="peopleincar_insurance">车上人员责任险</string>
    <string name="scratch_insurance">车身划痕险</string>
    <string name="button_ok">确定</string>

    <!--AskPriseActivity-->

    <!--activity_askprise-->
    <string name="askprise_tv_telephone">电话</string>
    <string name="askprise_tv_hint_telephone">请输入您的电话</string>
    <string name="askprise_tv_drivinglicence">行驶证</string>
    <string name="askprise_tv_insurancecompany">请选择投保公司</string>
    <string name="askprise_tv_idcard">身份证</string>
    <string name="askprise_tv_insurancekind">险种选择 (建议填写)</string>
    <string name="shot_drivelicence_front">拍摄行驶证正本</string>
    <string name="shot_drivelicence_back">拍摄行驶证副本</string>


    <!--EditPersonalDataActivity-->

    <!--activity_edit_personal_data-->
    <string name="editpersonaldata_tel">18941332425 (请重新填写)</string>
    <string name="adddata">补充资料</string>
    <string name="reupload_drivelicence_back">（请重新上传行驶证副本）</string>
    <string name="reupload_idcard_back">（请重新上传身份证背面）</string>
    <string name="mePersonalCenter">个人中心</string>
    <string name="insurancecompany_picc">中国人民保险</string>
    <string name="insurancecompany_pingan">平安保险</string>
    <string name="insurancecompany_ab">安邦保险</string>


    <!--MyReportActivity-->
    <string name="titleStr_MyReportActivity">我的报价单</string>
    <string name="titleStr_BackFromMyReportActivity">撤销保单</string>
    <string name="layout_TrafficInsurance">交强险</string>
    <string name="layout_MoneyOfTrafficInsurance">¥980.00</string>
    <string name="layout_Tax">税费</string>
    <string name="layout_MoneyOfTax">¥980.00</string>
    <string name="layout_BusinessInsurance">商业险</string>
    <string name="layout_MoneyOfBusinessInsurance">¥3980.00</string>
    <string name="layout_Subsidy">油卡/路游侠补贴</string>
    <string name="layout_MoneyOfSubsidy">¥1000.00</string>
    <string name="layout_LearnMore">了解详情</string>
    <string name="layout_MoneyOfRepairFund">价值2145元</string>
    <string name="layout_GetRepairFund">获得维修基金:</string>
    <string name="layout_GetCommodityGift">获得商品礼包:</string>
    <string name="layout_MoneyOfCommodityGift">价值5940元</string>
    <string name="layout_CashOffer">现金优惠:</string>
    <string name="layout_MoneyOfCashOffer">320元</string>
    <string name="layout_TotalMoneyOfInsurance">保费合计：</string>
    <string name="layout_TotalMoneyOfInsurance_All">¥5940.00</string>
    <string name="layout_TotalMoneyOfInsurance_AfterDiscount">¥4940.00</string>
    <string name="layout_BuyNow">立即购买</string>
    <string name="layout_Offer">优惠:</string>
    <string name="layout_Sure">确定</string>

    <!--PersonalDataActivity-->
    <string name="titleStr_PersonalDataActivity">资料填写</string>
    <string name="layout_TotalMoneyOfInsuranceWithSymbol">保费合计：¥</string>
    <string name="layout_TotalMoneyOfInsuranceWithSymbol_Money">5940.00</string>
    <string name="layout_NickName">姓名</string>
    <string name="layout_InputNickName">请输入您的姓名</string>
    <string name="layout_AddressOfReportPost">保单邮寄地址</string>
    <string name="layout_InputAddressOfReportPost">请输入您的保单邮寄地址</string>
    <string name="layout_IDCard">身份证</string>
    <string name="layout_IDCard_Positive">拍摄身份证正面</string>
    <string name="layout_IDCard_Negative">拍摄身份证背面</string>
    <string name="layout_WayOfPay">请选择支付方式</string>
    <string name="layout_SureToBuy">支付</string>

    <!--InsuranceWithFragmentActivity-->
    <string name="titleStr_InsuranceWithFragmentActivity">我的保险</string>
    <string name="layout_Premium">保费:</string>
    <string name="layout_MoneyOfPremium_First">2456</string>
    <string name="layout_MoneyOfPremium_Second">4532</string>
    <string name="layout_MoneyOfCoupon">5940</string>
    <string name="layout_Yuan">元</string>
    <string name="layout_Coupon_Useful">可用</string>
    <string name="layout_Coupon_Useless">已使用</string>
    <string name="layout_CommodityGift">商品礼包</string>
    <string name="layout_RepairFund">维修基金</string>


</resources>
