<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_marginTop="30dp"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/myinsurance_carlicence_height"
        android:layout_marginRight="@dimen/myinsurance_layout_margin"
        >

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.2"></LinearLayout>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            >
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@mipmap/insurance_carlicence_bg"
                android:adjustViewBounds="true"
                android:scaleType="centerCrop"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="13dp"
                android:gravity="center_vertical"
                android:text="@string/myinsurance_carlicence"
                android:textColor="@color/white"
                android:textSize="@dimen/textsize_common" />

        </RelativeLayout>



        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2" />

    </LinearLayout>

    <android.support.v7.widget.CardView
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:orientation="vertical"
        android:layout_marginRight="@dimen/myinsurance_layout_margin"
        android:layout_marginLeft="@dimen/myinsurance_layout_margin"
        app:cardElevation="10dp"

        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="@color/white"
            >


                <ImageView
                    android:layout_width="300dp"
                    android:layout_height="190dp"
                    android:layout_marginTop="6dp"
                    android:background="@mipmap/myreport_report"
                    android:layout_gravity="center"
                    />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:background="@color/white">

                <LinearLayout
                    android:id="@+id/ll_myinsurance_finish"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:orientation="vertical">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1.2">

                        <ImageView
                            android:layout_width="80dp"
                            android:layout_height="wrap_content"
                            android:src="@mipmap/insurance_picc"
                            android:layout_alignParentBottom="true"
                            android:layout_marginLeft="18dp"/>

                    </RelativeLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="0.6"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/myinsurance_deadline_text"
                            android:textSize="@dimen/textsize_common"
                            android:layout_marginLeft="18dp"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/myinsurance_deadline_date"
                            android:textSize="@dimen/textsize_common"/>

                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1.2"
                        android:gravity="center"
                        android:paddingTop="@dimen/myinsurance_rightbutton_paddingtop">

                        <Button
                            android:id="@+id/bt_continuebuy"
                            android:layout_width="@dimen/myinsurance_button_width"
                            android:layout_height="@dimen/myinsurance_button_height"
                            android:text="@string/myinsurance_rightbutton_text"
                            android:textSize="@dimen/textsize_common"
                            android:textColor="@color/white"
                            android:background="@mipmap/insurance_buttonbg_pink"
                            android:layout_alignParentBottom="true" />

                    </RelativeLayout>

                    <LinearLayout
                        android:id="@+id/ll_myinsurance_callme"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="0.6"
                        android:gravity="center_horizontal"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/myinsurance_righttext_callus"
                            android:textSize="@dimen/textsize_common"
                            android:textColor="@color/gray6"/>

                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>
        </LinearLayout>


    </android.support.v7.widget.CardView>
</LinearLayout>